Working fetch and led state set.

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,4 @@ lib_deps =
 	adafruit/Adafruit NeoPixel@^1.10.7
 	bblanchon/ArduinoJson@^6.19.4
 	adafruit/TinyXML@^1.0.2
+build_flags = -Wno-write-strings
